# Ripple

./: .env.example  .gitignore  .tmp_gotest.txt  AGENTS.md  README.md  docker-compose.monitoring.yml  docker-compose.staging.yml  docker-compose.yml
.claude/: settings.json
.githooks/: pre-commit
api/: openapi.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend-go/: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  go.mod  go.sum
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  embeddings.py  weaver.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  cloud.py  graph.py  iceberg.py  lakes.py  nodes.py  shares.py
backend/app/core/: __init__.py  config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  audit_event.py  base.py  lake_membership.py  outbox.py  user.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  graph_service.py  lake_service.py  node_service.py  outbox_service.py  password.py  recommendation_service.py
backend/app/ws/: __init__.py  hub.py
backend/tests/: test_embeddings.py  test_health.py  test_password.py  test_security.py
docs/: MVP-范围与里程碑.md  README.md  ux-fix-plan.md  商业化模型.md  快速上手.md
frontend/: .env.example  .gitignore  Dockerfile  ai-trigger-harness.html  build_log.txt  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  subscription-harness.html  summarize-graph-harness.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
monitoring/: prometheus.yml
(+538 files in other folders)
